--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "latarnia-sukcesu-homepage",
+  "name": "dj-paradise-homepage",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://krzysiekworwa.github.io/latarnia-sukcesu-homepage/",
+  "homepage": "https://krzysiekworwa.github.io/dj-paradise-homepage/",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
