--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.3",
     "styled-components": "^6.1.19",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yet-another-react-lightbox": "^3.25.0"
   },
   "scripts": {
     "start": "react-scripts start",
