--- a/manifest.json
+++ b/manifest.json
@@ -4,12 +4,12 @@
   "description": "Pozyskiwanie środków na rozwój/zakładanie działalności",
   "icons": [
     {
-      "src": "financial.png",
+      "src": "logo.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "financial.png",
+      "src": "logo.png",
       "sizes": "512x512",
       "type": "image/png"
     }
