--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^19.1.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.3",
+    "react-scroll-parallax": "^3.4.5",
     "styled-components": "^6.1.19",
     "web-vitals": "^2.1.4",
     "yet-another-react-lightbox": "^3.25.0"
