--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
-  "short_name": "Latarnia sukcesu",
-  "name": "Latarnia sukcesu",
-  "description": "Pozyskiwanie środków na rozwój/zakładanie działalności",
+  "short_name": "DJ Paradise",
+  "name": "DJ Paradise - DJ na wesele i eventy | Muzyka, prowadzenie, oświetlenie",
+  "description": "DJ Paradise — profesjonalny DJ na wesele i eventy. Muzyka, prowadzenie, nagłośnienie i oświetlenie. Sprawdź ofertę i zarezerwuj termin.",
   "icons": [
     {
       "src": "logo.png",
